// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Should accept React element as label 1`] = `
.c2 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
  fill: currentColor;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.c3 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c0 {
  margin: initial;
  padding: initial;
  border: 0;
  color: inherit;
  font-weight: inherit;
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  text-align: inherit;
  text-transform: inherit;
  background-color: transparent;
  color: #ffffff;
  background-color: #024ddf;
  display: inline-block;
  width: 44px;
  height: 44px;
  border-width: 1px;
  border-radius: 4px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
}

.c0:disabled {
  border-color: #ebebeb;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c0:focus {
  outline-offset: 4px;
}

.c0:not(:disabled):hover {
  background-color: #0139a7;
}

.c0:not(:disabled):active {
  border-color: #012e85;
  color: #ffffff;
  background-color: #012e85;
}

.c0[aria-disabled="true"] {
  border-color: #ebebeb;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c0[aria-disabled="true"]:hover,
.c0[aria-disabled="true"]:focus {
  border-color: #ebebeb;
  color: #949494;
  background-color: #ebebeb;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 100%;
}

<div>
  <button
    class="c0"
    type="button"
  >
    <div
      class="c1"
    >
      <svg
        aria-hidden="true"
        class="c2"
        focusable="false"
        height="2em"
        rotate="-90"
        viewBox="0 0 24 24"
        width="2em"
      >
        <path
          d="M3.47 8.26 4.53 7.2 12 14.67l7.47-7.47 1.06 1.06L12 16.8z"
        />
      </svg>
    </div>
    <span
      class="c3"
    >
      <span>
        An accessible label
      </span>
       
      <span>
        across two components
      </span>
    </span>
  </button>
</div>
`;

exports[`Should allow rendering as an anchor tag 1`] = `
.c2 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
  fill: currentColor;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.c3 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c0 {
  margin: initial;
  padding: initial;
  border: 0;
  color: inherit;
  font-weight: inherit;
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  text-align: inherit;
  text-transform: inherit;
  background-color: transparent;
  color: #ffffff;
  background-color: #024ddf;
  display: inline-block;
  width: 44px;
  height: 44px;
  border-width: 1px;
  border-radius: 4px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
}

.c0:disabled {
  border-color: #ebebeb;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c0:focus {
  outline-offset: 4px;
}

.c0:not(:disabled):hover {
  background-color: #0139a7;
}

.c0:not(:disabled):active {
  border-color: #012e85;
  color: #ffffff;
  background-color: #012e85;
}

.c0[aria-disabled="true"] {
  border-color: #ebebeb;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c0[aria-disabled="true"]:hover,
.c0[aria-disabled="true"]:focus {
  border-color: #ebebeb;
  color: #949494;
  background-color: #ebebeb;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 100%;
}

<div>
  <a
    class="c0"
    href="/test"
  >
    <div
      class="c1"
    >
      <svg
        aria-hidden="true"
        class="c2"
        focusable="false"
        height="2em"
        rotate="-90"
        viewBox="0 0 24 24"
        width="2em"
      >
        <path
          d="M3.47 8.26 4.53 7.2 12 14.67l7.47-7.47 1.06 1.06L12 16.8z"
        />
      </svg>
    </div>
    <span
      class="c3"
    >
      Accessible label
    </span>
  </a>
</div>
`;

exports[`Should render as primary SquareButton with accessible name 1`] = `
.c2 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
  fill: currentColor;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.c3 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c0 {
  margin: initial;
  padding: initial;
  border: 0;
  color: inherit;
  font-weight: inherit;
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  text-align: inherit;
  text-transform: inherit;
  background-color: transparent;
  color: #ffffff;
  background-color: #024ddf;
  display: inline-block;
  width: 44px;
  height: 44px;
  border-width: 1px;
  border-radius: 4px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
}

.c0:disabled {
  border-color: #ebebeb;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c0:focus {
  outline-offset: 4px;
}

.c0:not(:disabled):hover {
  background-color: #0139a7;
}

.c0:not(:disabled):active {
  border-color: #012e85;
  color: #ffffff;
  background-color: #012e85;
}

.c0[aria-disabled="true"] {
  border-color: #ebebeb;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c0[aria-disabled="true"]:hover,
.c0[aria-disabled="true"]:focus {
  border-color: #ebebeb;
  color: #949494;
  background-color: #ebebeb;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 100%;
}

<div>
  <button
    class="c0"
    type="button"
  >
    <div
      class="c1"
    >
      <svg
        aria-hidden="true"
        class="c2"
        focusable="false"
        height="2em"
        rotate="-90"
        viewBox="0 0 24 24"
        width="2em"
      >
        <path
          d="M3.47 8.26 4.53 7.2 12 14.67l7.47-7.47 1.06 1.06L12 16.8z"
        />
      </svg>
    </div>
    <span
      class="c3"
    >
      Accessible label
    </span>
  </button>
</div>
`;

exports[`Should render loading spinner and hide text when loading 1`] = `
.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 24px;
  height: 24px;
  color: #ffffff;
}

.c3::before {
  position: absolute;
  display: block;
  width: 100%;
  height: 100%;
  border-color: #ffffff;
  border-style: solid;
  border-width: calc(24px / 10);
  border-inline-start-color: rgba(255,255,255,0.25);
  border-radius: 50%;
  -webkit-animation: iOtnio 0.75s linear infinite !important;
  animation: iOtnio 0.75s linear infinite !important;
  content: "";
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  margin: initial;
  padding: initial;
  border: 0;
  color: inherit;
  font-weight: inherit;
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  text-align: inherit;
  text-transform: inherit;
  background-color: transparent;
  color: #ffffff;
  background-color: #024ddf;
  display: inline-block;
  width: 44px;
  height: 44px;
  border-width: 1px;
  border-radius: 4px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
}

.c0:disabled {
  border-color: #ebebeb;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c0:not(:disabled) {
  cursor: wait;
}

.c0:focus {
  outline-offset: 4px;
}

.c0[aria-disabled="true"] {
  border-color: #ebebeb;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c0[aria-disabled="true"]:hover,
.c0[aria-disabled="true"]:focus {
  border-color: #ebebeb;
  color: #949494;
  background-color: #ebebeb;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 100%;
}

<div>
  <button
    class="c0"
    type="button"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <span
          class="c3"
        />
      </div>
    </div>
    <span
      aria-live="assertive"
      class="c4"
      role="status"
    >
      Form submitting
    </span>
  </button>
</div>
`;
